#PROJECT(ds)
ADD_SUBDIRECTORY(gtest-1.7.0)
#添加gtest子目录

SET(GTEST_ROOT ${PROJECT_SOURCE_DIR}/gtest-1.7.0)
#将gtest目录赋值给变量GTEST_ROOT变量

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  ${GTEST_ROOT}/include
)
#头文件目录

message("project EXECUTABLE_OUTPUT_PATH is ${EXECUTABLE_OUTPUT_PATH}")
SET(EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/unittests)
message("unittest EXECUTABLE_OUTPUT_PATH is ${EXECUTABLE_OUTPUT_PATH}")

ADD_SUBDIRECTORY(src)
#添加src子目录